<resources>
    <string name="app_name">Firebase</string>
    <string name="app_login">Login</string>
    <string name="app_register">Register</string>
    <string name="app_main">Menu Principal</string>
    <string name="app_profile">Profile</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    <!--String realcionado con no llenar campo de la clase Register -->
    <string name="error_user">Llene el campo Usuario</string>
    <string name="error_name">Llene el campo Nombre</string>
    <string name="error_lastName">Llene el campo Apellido</string>
    <string name="error_email">Llene el campo Correo</string>
    <string name="error_password">Llene el campo Contraseña</string>
    <string name="error_passowd_num">La contraseña es muy corta</string>
    <string name="error_email_val">La direccion de correo es invalida</string>

    <!-- String error para login-->
    <string name="errorLogin_Email">La direccion de correo es invalida</string>
    <string name="errorLogin_Password">La contraseña es incorrecta</string>
    <string name="error_Email_Password">Revise si la contraseña y el correo estan correctos</string>

    <!-- Hint de las vistas-->
    <string name="login_email">Correo</string>
    <string name="login_password">Contraseña</string>
    <string name="user">Ingrese su Usuario</string>
    <string name="password">Ingrese su Contraseña</string>
    <string name="nombre">Ingrese su Nombre</string>
    <string name="apellido">Ingrese su Apellido</string>
    <string name="email">Ingrese su Correo</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonRegister">Register</string>
</resources>
