<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="30dp"
        tools:ignore="MissingConstraints"
        android:hint="@string/nombre"/>
    <EditText
        android:id="@+id/editApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editNombre"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        android:hint="@string/apellido"/>
    <EditText
        android:id="@+id/editUsuario"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editApellido"
        android:hint="@string/user"/>
    <EditText
        android:id="@+id/editContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editUsuario"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editContraseña"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints"
        android:hint="@string/email"/>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/buttonRegister"
        app:layout_constraintTop_toBottomOf="@+id/editEmail"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="89dp"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/determinateBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progress="25"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="464dp"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>